<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".View.Translation.TranslationMenuFragment">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transMenuHead"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:layout_centerInParent="true"

            />

    </RelativeLayout>
    <GridLayout
        android:columnCount="2"
        android:rowCount="2"
        android:layout_weight="7"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="15dp"
        >

        <!--Row 1, Column 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/favoritesCard"
            android:onClick="openTranslations"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="7.5dp"
            android:layout_marginRight="7.5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="165dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favTrans"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Row 1, Column 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/greetingsCard"
            android:onClick="openTranslations"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="7.5dp"
            android:layout_marginRight="7.5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="165dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/greetTrans"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Row 2, Column 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/emergencyCard"
            android:onClick="openTranslations"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="7.5dp"
            android:layout_marginRight="7.5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="165dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/emergTrans"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Row 2, Column 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/questionsCard"
            android:onClick="openTranslations"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="7.5dp"
            android:layout_marginRight="7.5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="165dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/quesTrans"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </GridLayout>

</LinearLayout>